# ejercicios-2018-matischroder

./: CMakeLists.txt
U00_Repaso/: CMakeLists.txt
U00_Repaso/Ej-01/: Circulo.cpp  Circulo.h  Color.h  Cuadrado.cpp  Cuadrado.h  Geometria.h  Triangulo.cpp  Triangulo.h
U00_Repaso/Ej-02/: Calculadora.h  main.cpp
U00_Repaso/Ej-04/: main.cpp
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
U01_Recursividad/Ej-03/: ackerman.cpp  main.cpp
U01_Recursividad/Ej-04/: main.cpp  mcd.cpp
U01_Recursividad/Ej-05/: digitos.cpp  main.cpp
U02_Listas/: CMakeLists.txt
U02_Listas/Ej-01/: main.cpp
U02_Listas/Ej-02/: main.cpp
U02_Listas/Ej-03/: main.cpp
U02_Listas/Ej-04/: main.cpp  union.h
U02_Listas/Ej-05/: CircList.h
U02_Listas/Lista/: Lista.h  nodo.cpp  nodo.h
U03_Pilas/Ej-01/: main.cpp
U03_Pilas/Ej-02/: main.cpp
U03_Pilas/Ej-04/: main.cpp
U03_Pilas/Ej-05/: main.cpp
U03_Pilas/Pila/: Pila.h
U04_Colas/Cola/: Cola.h  nodo.h
U04_Colas/Ej-01/: main.cpp
U04_Colas/Ej-02/: main.cpp
U04_Colas/Ej-03/: Colaprioridades.h  main.cpp  nodo.h
U05_Hash/Ej-01/: main.cpp
U05_Hash/HashMap/: HashMap.h
U06_Arbol/Arbol/: ArbolBinario.h  NodoArbol.h
U10_Repaso_parcial/: CMakeLists.txt  Ej_1.cpp  Ej_1.h  Ej_2.cpp  Ej_2.h  Ej_3.cpp  Ej_3.h  Ej_4.cpp  Ej_4.h  Ej_5.cpp  Ej_5.h  Ej_6.cpp  Ej_6.h  Ej_7.cpp  Ej_7.h  Ej_8.cpp  Ej_8.h  Ej_9.cpp  Ej_9.h
