set(SOURCE_FILES_01 Ej-01/main.cpp Ej-01/Geometria.cpp Ej-01/Cuadrado.cpp Ej-01/Triangulo.cpp Ej-01/Circulo.cpp Ej-01/Color.cpp ../U10_Repaso_parcial/Ej_1.cpp ../U10_Repaso_parcial/Ej_1.h ../U10_Repaso_parcial/Ej_2.cpp ../U10_Repaso_parcial/Ej_2.h ../U10_Repaso_parcial/Ej_3.cpp ../U10_Repaso_parcial/Ej_3.h ../U10_Repaso_parcial/Ej_4.cpp ../U10_Repaso_parcial/Ej_4.h ../U10_Repaso_parcial/Ej_5.cpp ../U10_Repaso_parcial/Ej_5.h ../U10_Repaso_parcial/Ej_6.cpp ../U10_Repaso_parcial/Ej_6.h ../U10_Repaso_parcial/Ej_7.cpp ../U10_Repaso_parcial/Ej_7.h ../U10_Repaso_parcial/Ej_8.cpp ../U10_Repaso_parcial/Ej_8.h ../U10_Repaso_parcial/Ej_9.cpp ../U10_Repaso_parcial/Ej_9.h)
add_executable(U00-E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej-02/main.cpp Ej-02/Calculadora.cpp)
add_executable(U00-E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej-03/main.cpp Ej-03/Calculadora.cpp)
add_executable(U00-E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej-04/main.cpp)
add_executable(U00-E04 ${SOURCE_FILES_04})

set(SOURCE_FILES_05 Ej-05/main.cpp Ej-05/Entero.cpp)
add_executable(U00-E05 ${SOURCE_FILES_05})

set(SOURCE_FILES_06 Ej-06/main.cpp)
add_executable(U00-E06  ${SOURCE_FILES_06})