set(SOURCE_FILES_01 Ej_1.cpp)
add_executable(U10_E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej_2.cpp)
add_executable(U10_E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej_3.cpp)
add_executable(U10_E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej_4.cpp)
add_executable(U10_E04 ${SOURCE_FILES_04})

set(SOURCE_FILES_05 Ej_5.cpp)
add_executable(U10_E05 ${SOURCE_FILES_05})