set(SOURCE_FILES_01 Ej_1.cpp)
add_executable(U10_E01 ${SOURCE_FILES_01})

set(SOURCE_FILES_02 Ej_2.cpp)
add_executable(U10_E02 ${SOURCE_FILES_02})

set(SOURCE_FILES_03 Ej_3.cpp)
add_executable(U10_E03 ${SOURCE_FILES_03})

set(SOURCE_FILES_04 Ej_4.cpp)
add_executable(U10_E04 ${SOURCE_FILES_04})

set(SOURCE_FILES_05 Ej_5.cpp)
add_executable(U10_E05 ${SOURCE_FILES_05})

set(SOURCE_FILES_06 Ej_6.cpp)
add_executable(U10_E06 ${SOURCE_FILES_06})

set(SOURCE_FILES_07 Ej_7.cpp)
add_executable(U10_E07 ${SOURCE_FILES_07})

set(SOURCE_FILES_08 Ej_8.cpp)
add_executable(U10_E08 ${SOURCE_FILES_08})

set(SOURCE_FILES_09 Ej_9.cpp)
add_executable(U10_E09 ${SOURCE_FILES_09})